[package]
name = "modframe"
version = "0.1.0"
repository = "https://github.com/Icatream/warframe_modder"
authors = ["Icatream <windc96@gmail.com>"]
description = "warframe modding simulator"
license = "GNU AGPLv3"
readme = "./README.MD"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
strum = "0.20.0"
strum_macros = "0.20.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[profile.release]
lto = true
opt-level = 'z'

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Oz']